--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             </div>
             <div style="float: right;">
-                <a href="Ryan_Shar_Resume.pdf" target="_blank"> Resume </a>
+                <a href="https://rshar01.github.io/pdfs/Ryan_Shar_Resume.pdf" target="_blank"> Resume </a>
                 <!-- <ul> -->
                 <!--     <li style="display:inline-block; margin-right:10px;"> -->
                 <!--         <a href="Ryan_Shar_Resume.pdf" target="_blank"> Resume </a> -->
@@ -27,7 +27,7 @@
         </div>
         <div class="main">
             <div class="face-n-about">
-                <img style="width:18%; height: auto; padding-left: 5%; float: left;" src="cherry_blossom_grin.jpeg"/>
+                <img style="width:18%; height: auto; padding-left: 5%; float: left;" src="https://rshar01.github.io/media/cherry_blossom_grin.jpeg"/>
                 <div class="about">
                     <h2> About </h2>
                     Machine Learning Researcher currently interested in human-AI interactions and interpretability <br><br>
@@ -97,7 +97,7 @@
                             <p class="line-list-subtitle"> University of British Columbia  </p>
                             <ul>
                                 <li>
-                                    Worked on Optimal Sparse Decision Trees (GOSDT): <a href="hon-thesis.pdf" target="_blank">pdf</a><br><br>
+                                    Worked on Optimal Sparse Decision Trees (GOSDT): <a href="https://rshar01.github.io/pdfs/hon-thesis.pdf" target="_blank">pdf</a><br><br>
                                 </li>
                             </ul>
                             <ul>
