--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta charset="utf-8" />
         <meta name="author" content="Ryan Shar" />
         <link rel="stylesheet" href="index.css" target="_blank"/>
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'>
+
     </head>
 
     <body>
