updated resume and added more bulelts

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="about">
                     <h2> About </h2>
                     Machine Learning Researcher currently interested in human-AI interactions and interpretability <br><br>
-                    Currenlty working under Professor Ameet Talwalkar and Valerie Chen on LLM steering <br><br>
+                    Currenlty working under Professor Ameet Talwalkar and Valerie Chen on LLM alignment<br><br>
                     <span class="pseudo-bold">Email:</span> rshar@cs.cmu.edu
                 </div>
             </div>
@@ -96,11 +96,11 @@
                     <h2> Projects </h2> 
                     <ul class="line-list-sessions"> 
                         <li> 
-                            <div class="line-list-title"> Deterministic & Bernoulli Sampling </div>
+                            <div class="line-list-title"> Deterministic & Bernoulli Sampling (<a href="https://rshar01.github.io/pdfs/hon-thesis.pdf" target="_blank">pdf</a>)</div>
                             <p class="line-list-subtitle"> University of British Columbia  </p>
                             <ul>
                                 <li>
-                                    Worked on Optimal Sparse Decision Trees (GOSDT): <a href="https://rshar01.github.io/pdfs/hon-thesis.pdf" target="_blank">pdf</a><br><br>
+                                    Worked on Optimal Sparse Decision Trees (GOSDT) <br><br>
                                 </li>
                             </ul>
                             <ul>
@@ -119,14 +119,25 @@
                     </ul>
                     <ul>
                         <li> 
-                            <div class="line-list-title"> Class Based VAE </div>
+                            <div class="line-list-title"> Class Based VAE (<a href="https://github.com/rShar01/Imputation-Variational-Autoencoder" target="_blank">github</a>)</div>
                             <p class="line-list-subtitle"> University of British Columbia </p>
-                            <p>
-                            </p>
+                            <ul>
+                                <li>
+                                    Created a novel statistical model for <br>
+                                    CPSC 440 (Advanced Machine Learning) <br><br> 
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    Achieved improved reconstruction error of<br>
+                                    scarse labels with lower variance<br><br>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
             </div>
+            <div style="height: 3rem"> </div>
             
         </div>
     </body>
