--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <img style="width:18%; height: auto; padding-left: 5%; float: left;" src="https://rshar01.github.io/media/cherry_blossom_grin.jpeg"/>
                 <div class="about">
                     <h2> About </h2>
-                    Machine Learning Researcher currently interested in human-AI interactions and interpretability <br><br>
-                    Currenlty working under Professor Ameet Talwalkar and Valerie Chen on LLM alignment<br><br>
+                    Machine Learning Researcher working on making LLMs better for humans!<br><br>
+                    I am fortunate to experiment with AI models under the guidence of <a href="https://www.cs.cmu.edu/~atalwalk/" target="_blank">Professor Ameet Talwalkar</a> and <a href="https://valeriechen.github.io/" target="_blank">Valerie Chen</a> <br><br>
                     <span class="pseudo-bold">Email:</span> rshar@cs.cmu.edu
                 </div>
             </div>
