--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
         <link rel="stylesheet" href="index.css" target="_blank"/>
         <meta http-equiv='cache-control' content='no-cache'> 
         <meta http-equiv='expires' content='0'> 
-        <meta http-equiv='pragma' content='no-cache'>
+        <meta http-equiv='pragma' content='no-cache'>   
+        <style>
+        .scroll-top-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 15px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+            display: block;
+            transition: all 0.3s ease;
+        }
+
+        .scroll-top-button:hover {
+            background-color: #45a049;
+            transform: scale(1.1);
+        }
+    </style>
     </head>
 
     <body>
@@ -30,10 +51,10 @@
         </div>
         <div class="main">
             <div class="face-n-about">
-                <img style="width:18%; height: auto; padding-left: 5%; float: left;" src="https://rshar01.github.io/media/cherry_blossom_grin.jpeg"/>
+                <img style="width:24%; height: auto; padding-left: 5%; float: left;" src="https://rshar01.github.io/media/cherry_blossom_grin.jpeg"/>
                 <div class="about">
                     <h2> About </h2>
-                    Machine Learning Researcher working on making LLMs better for humans!<br><br>
+                    Machine Learning Researcher working on making LLMs practical <br><br>
                     I am fortunate to experiment with AI models under the guidence of <a href="https://www.cs.cmu.edu/~atalwalk/" target="_blank">Professor Ameet Talwalkar</a> and <a href="https://valeriechen.github.io/" target="_blank">Valerie Chen</a> <br><br>
                     <span class="pseudo-bold">Email:</span> rshar@cs.cmu.edu
                 </div>
@@ -46,7 +67,9 @@
                             <div class="line-list-title"> MS Machine Learning, 2025 </div>
                             <p class="line-list-subtitle">  Carnegie Mellon University </p>
                             <p>
-                            <span class="pseudo-bold">Research:</span> under Dr.Ameet Talwalkar and Valerie Chen
+                            <span class="pseudo-bold">Overall GPA:</span> 4.0/4.0 <br><br>
+                            <span class="pseudo-bold">Research:</span> benchmarking LLM performance with human interaction <br><br>
+                            <span class="pseudo-bold">Relevent Coursework:</span> Graduate Machine learning, ML in practice, convex optimization
                             </p>
                         </li>
                         <li> 
@@ -54,7 +77,8 @@
                             <p class="line-list-subtitle"> University of British Columbia </p>
                             <p>
                             <span class="pseudo-bold">Overall GPA:</span> 4.0/4.0 <br><br>
-                            <span class="pseudo-bold">Honours Thesis:</span> advised by Dr. Mathias Lecuyer 
+                            <span class="pseudo-bold">Honours Thesis:</span> Improving the weighted error of sparse decision trees <br><br>
+                            <span class="pseudo-bold">Relevent Coursework:</span> Advanced machine learning, applied machine learning, NLP, intelligent systems, advanced databases, machine learning and data mining, stochastic processes
                             </p>
                         </li>
                     </ul>
@@ -65,27 +89,28 @@
                     <h2> Experience </h2> 
                     <ul class="line-list-sessions"> 
                         <li> 
+                            <div class="line-list-title"> Graduate Student Researcher </div>
+                            <p class="line-list-subtitle"> Carnegie Mellon University <p>
+                            <p>2024-2025</p>
+                        </li>
+                        <li> 
                             <div class="line-list-title"> Teaching Assistant </div>
                             <p class="line-list-subtitle"> University of British Columbia  </p>
-                            <p>
-                                <span class="pseudo-bold">Taught:</span> CPSC 110, CPSC 210, CPSC 213, CPSC 317 <br><br>
-                                <span class="pseudo-bold">Avg. Student Review:</span> 4.9/5.0 <br><br>
+                            <p> 2019-2024
                             </p>
                         </li>
                         <li> 
                             <div class="line-list-title"> Undergraduate Research Assistant </div>
                             <p class="line-list-subtitle"> University of British Columbia </p>
                             <p>
-                                Earned NSERC USRA grant with Dr. Mathias Lecuyer <br><br>
-                                Worked with RL bandits in distributed systems 
+                            2023-2024
                             </p>
                         </li>
                         <li> 
                             <div class="line-list-title"> Firmware Developer </div>
                             <p class="line-list-subtitle"> Motorola Solutions </p>
                             <p>
-                            Wrote C++ code for H5A line of modular cameras <br><br>
-                            Created gRPC bindings for live firmware interaction 
+                            2021-2022
                             </p>
                         </li>
                     </ul>
@@ -96,22 +121,43 @@
                     <h2> Projects </h2> 
                     <ul class="line-list-sessions"> 
                         <li> 
-                            <div class="line-list-title"> Deterministic & Bernoulli Sampling (<a href="https://rshar01.github.io/pdfs/hon-thesis.pdf" target="_blank">pdf</a>)</div>
+                            <div class="line-list-title"> User Intent Benchmark </div>
+                            <p class="line-list-subtitle"> Carnegie Mellon University </p>
+                            <ul>
+                                <li>
+                                    Analyzing effects of user ambiguity on LLM performance via simulated human interaction (methods to be published) <br><br>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    Implemented novel feedback technique with LLMs using proprietary models (GPT4o, Sonnet) and open source  hugging face models (Llama, Gemma, Qwen), achieving 25% higher task correctness <br><br>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    Designed and conducted experiments to analyze efficacy of simulated human feedback, showing statistically significant differences in outcome
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+
+                    <ul class="line-list-sessions"> 
+                        <li> 
+                            <div class="line-list-title"> Deterministic & Bernoulli Sampling (<a href="https://rshar01.github.io/pdfs/hon-thesis.pdf" target="_blank">pdf</a>)(<a href="https://github.com/FrederickShpilevskiy/gosdt_project" target="_blank">code</a>)</div>
                             <p class="line-list-subtitle"> University of British Columbia  </p>
                             <ul>
                                 <li>
-                                    Worked on Optimal Sparse Decision Trees (GOSDT) <br><br>
+                                    Improved weighted loss of decision trees (GOSDT model) with a novel sampling method using SciPy and numpy  <br><br>
                                 </li>
                             </ul>
                             <ul>
                                 <li>
-                                    Improved sampling error bound for large datasets<br><br>
+                                    Experimentally showed 15% reduction of weighted loss and reduced loss variance compared to models without our sampling method<br><br>
                                 </li>
                             </ul>
                             <ul>
                                 <li>
-                                    Designed synthetic weighted data to compare<br>
-                                    fully random sampling and our novel method<br>
+                                    Designed synthetic, weighted datasets with imbalanced and sparse distributions, to represent real data seen in rare diseases and underrepresented populations <br><br>
 
                                 </li>
                             </ul>
@@ -123,14 +169,12 @@
                             <p class="line-list-subtitle"> University of British Columbia </p>
                             <ul>
                                 <li>
-                                    Created a novel statistical model for <br>
-                                    CPSC 440 (Advanced Machine Learning) <br><br> 
+                                    Created a novel statistical model for CPSC 440 (Advanced Machine Learning) <br><br> 
                                 </li>
                             </ul>
                             <ul>
                                 <li>
-                                    Achieved improved reconstruction error of<br>
-                                    scarse labels with lower variance<br><br>
+                                    Achieved improved reconstruction error of scarse labels with lower variance<br><br>
                                 </li>
                             </ul>
                         </li>
@@ -140,6 +184,16 @@
             <div style="height: 3rem"> </div>
             
         </div>
+    <button class="scroll-top-button" onclick="scrollToTop()">↑</button>
+
+    <script>
+        function scrollToTop() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        }
+    </script>
     </body>
 
 
