added some apple stuff

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="name">
                 Ryan Shar<br>
                 <div style="font-size: 20px; color:#5c5f77;">
-                    MS Machine Learning @ Carnegie Mellon
+                    Research Scientist @ Apple
                 </div>
 
             </div>
@@ -56,6 +56,7 @@
                     <h2> About </h2>
                     Machine Learning Researcher working on making LLMs practical <br><br>
                     I am fortunate to experiment with AI models under the guidence of <a href="https://www.cs.cmu.edu/~atalwalk/" target="_blank">Professor Ameet Talwalkar</a> and <a href="https://valeriechen.github.io/" target="_blank">Valerie Chen</a> <br><br>
+                    <span class="pseudo-bold"> Current:</span> Research Scientist @ Apple  <br><br>
                     <span class="pseudo-bold">Email:</span> rshar@cs.cmu.edu
                 </div>
             </div>
@@ -78,7 +79,7 @@
                             <p>
                             <span class="pseudo-bold">Overall GPA:</span> 4.0/4.0 <br><br>
                             <span class="pseudo-bold">Honours Thesis:</span> Improving the weighted error of sparse decision trees <br><br>
-                            <span class="pseudo-bold">Relevent Coursework:</span> Advanced machine learning, applied machine learning, NLP, intelligent systems, advanced databases, machine learning and data mining, stochastic processes
+                            <span class="pseudo-bold">Relevent Coursework:</span> Advanced machine learning, applied machine learning, NLP,<br><br> intelligent systems, advanced databases, machine learning and data mining, stochastic processes
                             </p>
                         </li>
                     </ul>
@@ -89,9 +90,14 @@
                     <h2> Experience </h2> 
                     <ul class="line-list-sessions"> 
                         <li> 
+                            <div class="line-list-title"> Research Scientist </div>
+                            <p class="line-list-subtitle"> Apple <p>
+                            <p>2025-Present</p>
+                        </li>
+                        <li> 
                             <div class="line-list-title"> Graduate Student Researcher </div>
                             <p class="line-list-subtitle"> Carnegie Mellon University <p>
-                            <p>2024-2025</p>
+                            <p>2024-Present</p>
                         </li>
                         <li> 
                             <div class="line-list-title"> Teaching Assistant </div>
