--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <img style="width:24%; height: auto; padding-left: 5%; float: left;" src="https://rshar01.github.io/media/cherry_blossom_grin.jpeg"/>
                 <div class="about">
                     <h2> About </h2>
-                    Machine Learning Researcher working on making LLMs practical <br><br>
-                    I am fortunate to experiment with AI models under the guidence of <a href="https://www.cs.cmu.edu/~atalwalk/" target="_blank">Professor Ameet Talwalkar</a> and <a href="https://valeriechen.github.io/" target="_blank">Valerie Chen</a> <br><br>
+                    ML Researcher making LLMs practical for real tasks<br><br>
+                    I have the fortunate of playing with AI models under the guidence of <a href="https://www.cs.cmu.edu/~atalwalk/" target="_blank">Professor Ameet Talwalkar</a> and <a href="https://valeriechen.github.io/" target="_blank">Valerie Chen</a> <br><br>
                     <span class="pseudo-bold"> Current:</span> Research Scientist @ Apple  <br><br>
                     <span class="pseudo-bold">Email:</span> rshar@cs.cmu.edu
                 </div>
@@ -69,7 +69,7 @@
                             <p class="line-list-subtitle">  Carnegie Mellon University </p>
                             <p>
                             <span class="pseudo-bold">Overall GPA:</span> 4.0/4.0 <br><br>
-                            <span class="pseudo-bold">Research:</span> benchmarking LLM performance with human interaction <br><br>
+                            <span class="pseudo-bold">Research:</span> Human-AI Interactions for Programming Tasks<br><br>
                             <span class="pseudo-bold">Relevent Coursework:</span> Graduate Machine learning, ML in practice, convex optimization
                             </p>
                         </li>
@@ -85,6 +85,20 @@
                     </ul>
                 </div>
             </div>
+            <div class="line-list-container">
+                <div class="line-list-wrapper"> 
+                    <h2> Papers </h2> 
+                    <ul class="line-list-sessions"> 
+                        <li> 
+                            <div class="line-list-title"> When Benchmarks Talk: Re-Evaluating Code LLMs with Interactive Feedback (<a href="https://arxiv.org/abs/2502.18413" target="_blank">arXiv</a>) </div>
+                            <p> Jane Pan*, <strong>Ryan Shar*</strong>, Jacob Pfau, Ameet Talwalkar, He He, Valerie Chen</p>
+                            <p>ACL, 2025</p>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+
             <div class="line-list-container">
                 <div class="line-list-wrapper"> 
                     <h2> Experience </h2> 
